<resources>
    <string name="app_name">Lemonade</string>
    <string name="tap_tree">Tap the lemon tree to select a lemon</string>
    <string name="tap_squeeze">Keep tapping the lemon to squeeze it</string>
    <string name="tap_drink">Tap the lemonade to drink it</string>
    <string name="tap_restart">Tap the empty glass to start again</string>

    <string name="lemon_tree">Lemon tree</string>
    <string name="lemon_squeeze">Lemon</string>
    <string name="lemon_drink">Glass of lemonade</string>
    <string name="lemon_restart">Empty glass</string>
</resources>